welcome.lessons.welcome.array.array667.Array667.scala.error
array667:6: error: ';' expected but ',' found.
  return c6,c7} 
           ^